--- a/biocryst.bib
+++ b/biocryst.bib
@@ -324,6 +324,15 @@
   date_added	= {Sun Jul 21 09:15:06 2024}
 }
 
+@Misc{		  Jmol2024,
+  author	= {Jmol},
+  title		= {Jmol: an open-source Java viewer for chemical structures
+		  in 3D.},
+  note		= {16.2},
+  url		= {http://www.jmol.org/},
+  creationdate	= {2024-07-23T13:54:53}
+}
+
 @Article{	  Jumper2021HighlyAccurateProteinStructurePredictionWithAlphaFold,
   author	= {Jumper, John and Evans, Richard and Pritzel, Alexander and
 		  Green, Tim and Figurnov, Michael and Ronneberger, Olaf and
@@ -615,24 +624,11 @@
   title		= {Data Structures for Statistical Computing in Python},
   booktitle	= {Proceedings of the Python in Science Conference},
   year		= 2010,
-  pages		= {nil},
+  pages		= {56-61},
   doi		= {10.25080/majora-92bf1922-00a},
   url		= {http://dx.doi.org/10.25080/Majora-92bf1922-00a},
   date_added	= {Mon Jul 22 13:26:16 2024},
-  month		= {-},
-  file		= {:Mckinney2010DataStructuresStatisticalComputingPython.pdf:PDF}
-}
-
-@InProceedings{	  Mckinney2010DataStructuresStatisticalComputingPython,
-  author	= {Wes McKinney},
-  title		= {Data Structures for Statistical Computing in Python},
-  booktitle	= {Proceedings of the Python in Science Conference},
-  year		= 2010,
-  pages		= {nil},
-  doi		= {10.25080/majora-92bf1922-00a},
-  url		= {http://dx.doi.org/10.25080/Majora-92bf1922-00a},
-  date_added	= {Mon Jul 22 13:26:16 2024},
-  month		= {-},
+  month		= {July},
   file		= {:Mckinney2010DataStructuresStatisticalComputingPython.pdf:PDF}
 }
 
@@ -733,7 +729,7 @@
   doi		= {10.1107/s0907444911001314},
   url		= {http://dx.doi.org/10.1107/S0907444911001314},
   date_added	= {Mon Jul 22 17:10:55 2024},
-  file		= {:Murshudov2011Refmac5ForTheRefinementMacromolecularCrystalStructures.Pdf:PDF}
+  file		= {:Murshudov2011Refmac5ForTheRefinementMacromolecularCrystalStructures.pdf:PDF}
 }
 
 @Article{	  Painter2006ServerGenerationMultiGroupTlsModels,
@@ -1068,6 +1064,21 @@
   url		= {http://dx.doi.org/10.1107/S1399004714005550},
   date_added	= {Sat Jul 20 13:00:49 2024},
   file		= {:Weichenberger2014TenYearsProbabilisticEstimatesBiocrystalSolventContent.pdf:PDF}
+}
+
+@Article{	  Wilson1942DeterminationAbsoluteFromRelativeXRayIntensityData,
+  author	= {A. J. C. WILSON},
+  title		= {Determination of Absolute From Relative X-Ray Intensity
+		  Data},
+  journal	= {Nature},
+  volume	= 150,
+  number	= 3796,
+  pages		= {152-152},
+  year		= 1942,
+  doi		= {10.1038/150152a0},
+  url		= {http://dx.doi.org/10.1038/150152a0},
+  date_added	= {Sat Jul 20 08:55:52 2024},
+  file		= {:Wilson1942DeterminationAbsoluteFromRelativeXRayIntensityData.pdf:PDF}
 }
 
 @Article{	  Wojdyr2022GEMMIALibraryForStructuralBiology,
